# esquema

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  ast.cc  ast.hh  ci_string.cc  ci_string.hh  environ.cc  environ.hh  interp.cc  interp.hh  lexer.cc  lexer.hh  main.cc  native_proc.cc  native_proc.hh  parser.cc  parser.hh  token.cc  token.hh
tests/: CMakeLists.txt  interp_test.cc  lexer_test.cc  parser_test.cc
